[package]
name = "sound-garden-0x2"
version = "0.1.0"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>"]
edition = "2018"

[workspace]

members = [
    "audio_ops",
    "audio_program",
    "audio_server",
    "audio_vm",
    "crdt_engine",
    "play_program",
    "render_program",
    "sound_garden_druid",
    "sound_garden_format",
    "sound_garden_program",
    "sound_garden_types",
    "sound_garden_vst",
    "thread_worker"
]

[profile.release]
# lto = true
panic = "abort"
