[package]
name = "sound-garden-0x2"
version = "0.1.0"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>"]
edition = "2024"

[workspace]
resolver = "3"

members = [
    "audio_ops",
    "audio_program",
    "audio_server",
    "audio_vm",
    "play_program",
    "render_program",
    "sound_garden_egui",
    "sound_garden_format",
    "sound_garden_program",
    "sound_garden_types",
    "sound_garden_vst",
    "thread_worker"
]

[dev-dependencies]
audio_program = { path = "audio_program" }
audio_vm = { path = "audio_vm" }
criterion = "0.8.2"

[[bench]]
name = "performance"
harness = false

[profile.release]
# lto = true
panic = "abort"
