[package]
name = "sound-garden-0x2"
version = "0.1.0"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>"]
edition = "2024"

[workspace]
resolver = "3"

members = [
    "audio_ops",
    "audio_program",
    "audio_server",
    "audio_vm",
    "play_program",
    "render_program",
    "sound_garden_egui",
    "sound_garden_format",
    "sound_garden_program",
    "sound_garden_types",
    "sound_garden_vst",
    "thread_worker"
]

[workspace.dependencies]
ahash = "0.8.12"
anyhow = "1.0.102"
apodize = "1.0.0"
bincode = { version = "2.0.1", features = ["serde"] }
chrono = "0.4.45"
ciborium = "0.2.2"
clap = { version = "4.6.1", features = ["cargo"] }
cpal = "0.17.3"
crossbeam-channel = "0.5.15"
downcast-rs = "2.0.2"
eframe = "0.34.3"
egui = "0.34.3"
hound = "3.5.1"
itertools = "0.14.0"
log = "0.4.32"
micromath = "2.1.0"
rand = "0.10.1"
ringbuf = "0.5.0"
rustfft = "6.4.1"
serde = { version = "1.0.228", features = ["derive"] }
simple_logger = "5.2.0"
smallvec = "1.15.1"
snap = "1.1.1"
symphonia = { version = "0.5.5", features = ["all"] }
vst = "0.4.0"

alloc_counter = "0.0.4"

[dev-dependencies]
audio_program = { path = "audio_program" }
audio_vm = { path = "audio_vm" }
criterion = "0.8.2"

[[bench]]
name = "performance"
harness = false

[profile.release]
# lto = true
panic = "abort"
