[package]
name = "audio_ops"
version = "0.1.0"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
rustfft = "5.0.1"
apodize = "1.0.0"
micromath = "1.1.0"

[dependencies.audio_vm]
path = "../audio_vm"

[dependencies.rand]
version = "0.8.1"
features = ["small_rng"]
