[package]
name = "audio_ops"
version = "0.1.0"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14.0"
rustfft = "6.4.1"
apodize = "1.0.0"
micromath = "2.1.0"

[dependencies.audio_vm]
path = "../audio_vm"

[dependencies.rand]
version = "0.10.1"
