[package]
name = "audio_ops"
version = "0.1.0"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>"]
edition = "2024"

[dependencies]
itertools.workspace = true
log.workspace = true
rustfft.workspace = true
apodize.workspace = true
micromath.workspace = true
rand.workspace = true
audio_vm = { path = "../audio_vm" }
