[package]
name = "audio_program"
version = "0.1.0"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.6.1"
fasthash = "0.4.0"
log = "0.4.11"
regex = "1.5.5"

[dependencies.audrey]
version = "0.2.0"
git = "https://github.com/grantgustafson/audrey.git"
branch = "sample_dep_fix"

[dependencies.audio_ops]
path = "../audio_ops"

[dependencies.audio_vm]
path = "../audio_vm"

[dependencies.rand]
version = "0.8.1"
features = ["small_rng"]

[dependencies.serde]
version = "1.0.118"
features = ["derive"]
