[package]
name = "audio_program"
version = "0.1.0"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>"]
edition = "2024"

[dependencies]
smallvec.workspace = true
ahash.workspace = true
log.workspace = true
regex = "1.12.3"
rand.workspace = true
serde.workspace = true
rkyv.workspace = true
symphonia.workspace = true
audio_ops = { path = "../audio_ops" }
audio_vm = { path = "../audio_vm" }
