[package]
name = "audio_server"
version = "0.1.0"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>"]
edition = "2018"
description = "Sound Garden Audio Synth Server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "audio_server"
path = "./src/lib.rs"

[dependencies]
alloc_counter = "0.0.4"
anyhow = "1.0.34"
chrono = "0.4.19"
cpal = "0.13.1"
clap = "2.33.3"
crossbeam-channel = "0.5.0"
hound = "3.4.0"
ringbuf = "0.2.2"
serde_json = "1.0.59"
nng = "1.0.0-rc.2"

[dependencies.serde]
version = "1.0.117"
features = ["derive"]

[dependencies.audio_ops]
path = "../audio_ops"

[dependencies.audio_program]
path = "../audio_program"

[dependencies.audio_vm]
path = "../audio_vm"

[dependencies.thread_worker]
path = "../thread_worker"
