[package]
name = "audio_server"
version = "0.1.0"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>"]
edition = "2024"
description = "Sound Garden Audio Synth Server"

[lib]
name = "audio_server"
path = "./src/lib.rs"

[features]
allocation-checks = ["dep:alloc_counter"]

[dependencies]
alloc_counter = { workspace = true, optional = true }
anyhow.workspace = true
rkyv.workspace = true
chrono.workspace = true
cpal.workspace = true
clap.workspace = true
crossbeam-channel.workspace = true
hound.workspace = true
log.workspace = true
midir.workspace = true
rtrb.workspace = true
serde.workspace = true
audio_ops = { path = "../audio_ops" }
audio_program = { path = "../audio_program" }
audio_vm = { path = "../audio_vm" }
thread_worker = { path = "../thread_worker" }
