[package]
name = "crdt_engine"
version = "0.1.0"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crdts = "4.3.0"
ropey = "1.2.0"
rand = "0.8.1"

[dependencies.serde]
version = "1.0.118"
features = ["derive"]
