[package]
name = "render_program"
version = "0.1.0"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>"]
edition = "2024"

[dependencies]
hound.workspace = true
rand.workspace = true
audio_ops = { path = "../audio_ops" }
audio_program = { path = "../audio_program" }
audio_vm = { path = "../audio_vm" }
