[package]
name = "sound_garden"
version = "0.1.0"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.10.0"
anyhow = "1.0.16"
thiserror = "1.0.3"
crossbeam-channel = "0.3.9"
slog-scope = "4.2.0"
sloggers = "0.3.4"
rand = "0.7.2"
serde_json = "1.0.41"
unic-char-range = "0.9.0"

[dependencies.serde]
version = "1.0.102"
features = ["derive"]

[dependencies.slog]
version = "2.5.2"
# features = ["release_max_level_debug"]

[dependencies.sdl2]
version = "0.32"
default-features = false
features = ["ttf"]

[dependencies.audio_ops]
path = "../audio_ops"

[dependencies.audio_program]
path = "../audio_program"

[dependencies.audio_vm]
path = "../audio_vm"
