[package]
name = "sound_garden_druid"
version = "0.1.0"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/xi-editor/druid.git", version = "0.6" }
xi-rope = "0.3.0"
anyhow = "1.0.28"
clap = "2.33.0"
rand = "0.7.3"
