[package]
name = "sound_garden_druid"
version = "0.1.0"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>"]
edition = "2018"
description = "Sound Garden Druid"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/xi-editor/druid.git", version = "0.6" }
anyhow = "1.0.28"
clap = "2.33.0"
crossbeam-channel = "0.4.2"
rand = "0.7.3"
serde_json = "1.0.51"
snap = "1.0.0"
serde_cbor = "0.11.1"
nng = "1.0.0-rc.2"
chrono = "0.4.11"

[dependencies.serde]
version = "1.0.106"
features = ["derive"]

[dependencies.audio_program]
path = "../audio_program"

[dependencies.audio_server]
path = "../audio_server"

[dependencies.crdt_engine]
path = "../crdt_engine"

[dependencies.thread_worker]
path = "../thread_worker"
