[package]
name = "sound_garden_druid"
version = "0.1.0"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>"]
edition = "2018"
description = "Sound Garden Druid"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git", version = "0.8" }
anyhow = "1.0.37"
clap = "2.33.3"
crossbeam-channel = "0.5.0"
rand = "0.8.1"
serde_json = "1.0.61"
snap = "1.0.3"
serde_cbor = "0.11.1"
nng = "1.0.0-rc.2"
chrono = "0.4.19"
log = "0.4.11"
simple_logger = "1.11.0"

[dependencies.serde]
version = "1.0.118"
features = ["derive"]

[dependencies.audio_ops]
path = "../audio_ops"

[dependencies.audio_program]
path = "../audio_program"

[dependencies.audio_server]
path = "../audio_server"

[dependencies.audio_vm]
path = "../audio_vm"

[dependencies.crdt_engine]
path = "../crdt_engine"

[dependencies.sound_garden_format]
path = "../sound_garden_format"

[dependencies.sound_garden_types]
path = "../sound_garden_types"

[dependencies.thread_worker]
path = "../thread_worker"
