[package]
name = "sound_garden_egui"
version = "0.1.0"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>"]
edition = "2018"
description = "Sound Garden egui"

[dependencies]
anyhow = "1.0.37"
chrono = "0.4.19"
clap = "2.33.3"
crossbeam-channel = "0.5.0"
eframe = "0.34.3"
egui = "0.34.3"
log = "0.4.11"
serde_json = "1.0.61"
simple_logger = "1.11.0"

[dependencies.audio_ops]
path = "../audio_ops"

[dependencies.audio_program]
path = "../audio_program"

[dependencies.audio_server]
path = "../audio_server"

[dependencies.audio_vm]
path = "../audio_vm"

[dependencies.sound_garden_format]
path = "../sound_garden_format"

[dependencies.sound_garden_types]
path = "../sound_garden_types"

[dependencies.thread_worker]
path = "../thread_worker"
