[package]
name = "sound_garden_egui"
version = "0.1.0"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>"]
edition = "2024"
description = "Sound Garden egui"

[dependencies]
anyhow.workspace = true
rkyv.workspace = true
chrono.workspace = true
clap.workspace = true
crossbeam-channel.workspace = true
eframe.workspace = true
egui.workspace = true
log.workspace = true
simple_logger.workspace = true
audio_ops = { path = "../audio_ops" }
audio_program = { path = "../audio_program" }
audio_server = { path = "../audio_server" }
audio_vm = { path = "../audio_vm" }
sound_garden_format = { path = "../sound_garden_format" }
sound_garden_types = { path = "../sound_garden_types" }
thread_worker = { path = "../thread_worker" }
