[package]
name = "sound_garden_format"
version = "0.1.0"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
druid = { git = "https://github.com/linebender/druid.git", version = "0.7" }
serde_cbor = "0.11.1"
snap = "1.0.3"

[dependencies.serde]
version = "1.0.118"
features = ["derive"]

[dependencies.crdt_engine]
path = "../crdt_engine"

[dependencies.sound_garden_types]
path = "../sound_garden_types"
