[package]
name = "sound_garden_format"
version = "0.1.0"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
serde_cbor = "0.11.2"
snap = "1.1.1"

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.sound_garden_types]
path = "../sound_garden_types"
