[package]
name = "sound_garden_terminal"
version = "0.1.0"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.11.0"
crossbeam-channel = "0.4.0"
termion = "1.5.5"
tui = "0.8.0"
anyhow = "1.0.26"
rand = "0.7.3"
serde_json = "1.0.45"

[dependencies.serde]
version = "1.0.104"
features = ["derive"]

[dependencies.audio_ops]
path = "../audio_ops"

[dependencies.audio_program]
path = "../audio_program"

[dependencies.audio_vm]
path = "../audio_vm"

[dependencies.thread_worker]
path = "../thread_worker"
