[package]
name = "sound_garden_terminal"
version = "0.1.0"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>"]
edition = "2018"
description = "Sound Garden Terminal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
chrono = "0.4.11"
clap = "2.33.0"
crossbeam-channel = "0.4.2"
itertools = "0.9.0"
rand = "0.7.3"
serde_json = "1.0.51"
termion = "1.5.5"
tui = "0.9.1"

[dependencies.serde]
version = "1.0.106"
features = ["derive"]

[dependencies.audio_program]
path = "../audio_program"

[dependencies.audio_server]
path = "../audio_server"

[dependencies.thread_worker]
path = "../thread_worker"

[dependencies.redo]
version = "0.40.0"
features = ["serde"]
