[package]
name = "sound_garden_types"
version = "0.1.0"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/xi-editor/druid.git", version = "0.6" }
rand = "0.7.3"

[dependencies.serde]
version = "1.0.111"
features = ["derive"]

[dependencies.crdt_engine]
path = "../crdt_engine"
