[package]
name = "sound_garden_types"
version = "0.1.0"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.10.1"

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

