[package]
name = "sound_garden_vst"
version = "0.1.0"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.2.0"
alloc_counter = "0.0.4"
serde_json = "1.0.45"
crossbeam-channel = "0.4.2"

[dependencies.serde]
version = "1.0.104"
features = ["derive"]

[dependencies.audio_ops]
path = "../audio_ops"

[dependencies.audio_program]
path = "../audio_program"

[dependencies.audio_vm]
path = "../audio_vm"

[dependencies.thread_worker]
path = "../thread_worker"

[lib]
name = "soundgarden"
crate-type = ["cdylib"]
