[package]
name = "sound_garden_vst"
version = "0.1.0"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>"]
edition = "2024"

[features]
allocation-checks = ["dep:alloc_counter"]

[dependencies]
vst.workspace = true
alloc_counter = { workspace = true, optional = true }
bincode.workspace = true
crossbeam-channel.workspace = true
serde.workspace = true
audio_ops = { path = "../audio_ops" }
audio_program = { path = "../audio_program" }
audio_server = { path = "../audio_server" }
audio_vm = { path = "../audio_vm" }
thread_worker = { path = "../thread_worker" }

[lib]
name = "soundgarden"
crate-type = ["cdylib"]
